--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-#app {
+body {
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
   height: 100vh;
